icon size alignment fix

--- a/src/app/components/layout/side-menu/side-menu.component.css
+++ b/src/app/components/layout/side-menu/side-menu.component.css
@@ -26,6 +26,6 @@ ul:has(section.disabled) {
 }
 
 
-.schedules_icon {
+.sidebar-icon {
   vertical-align: 0.1em !important;
 }
